security_group.tf
resource "aws_security_group" "default_sg" {
  vpc_id = aws_vpc.etcd-vpc.id

  # add your required rules here

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
